--- a/config.example.json
+++ b/config.example.json
@@ -2,20 +2,32 @@
     "rooms": [
         {
             "exhaust": 100,
-            "motion": 8,
+            "motion": {
+                "sensor": 8,
+                "minutes": 5,
+                "time": 900
+            },
             "name": "Living room",
             "ping": [],
             "flow": 50
         },
         {
             "exhaust": 101,
-            "motion": 11,
+            "motion": {
+                "sensor": 11,
+                "minutes": 5,
+                "time": 900
+            },
             "name": "Kitchen",
             "flow": 25
         },
         {
             "exhaust": 102,
-            "motion": 2,
+            "motion": {
+                "sensor": 2,
+                "minutes": 5,
+                "time": 900
+            },
             "name": "Toilet",
             "flow": 10
         },
@@ -27,7 +39,11 @@
         },
         {
             "exhaust": 104,
-            "motion": 5,
+            "motion": {
+                "sensor": 5,
+                "minutes": 5,
+                "time": 900
+            },
             "humidity": "RH bathroom 1 (%)",
             "name": "Bathroom",
             "flow": 15
@@ -53,8 +69,6 @@
         "sample_time": 900
     },
     "ventilation_time": 900,
-    "motion_wait_time": 600,
-    "motion_minutes": 3,
     "itho_api": "192.168.1.2",
     "hue_api": "192.168.1.3",
     "hue_user": "hue API username/token here"
