Add support for Hue buttons
These can be used to manually enable ventilation of a room for a fixed
amount of time. An example of where this is useful is a kitchen
extractor: detecting when to enable this automatically is more or less
impossible, so instead we can use a button to enable it for a certain
amount of time.

Both short and long presses are supported, though a room can only react
to a single type of press. In addition, as we poll the state rapidly
pressing the button different ways results in us only observing the most
recent state.

--- a/config.example.json
+++ b/config.example.json
@@ -1,9 +1,9 @@
 {
     "rooms": [
         {
-            "exhaust": 100,
+            "exhaust": 99,
             "motion": {
-                "sensor": 8,
+                "id": 8,
                 "minutes": 5,
                 "time": 900
             },
@@ -12,9 +12,19 @@
             "flow": 50
         },
         {
+            "exhaust": 100,
+            "button": {
+                "id": 23,
+                "press": "short",
+                "time": 3600
+            },
+            "name": "Extractor",
+            "flow": 150
+        },
+        {
             "exhaust": 101,
             "motion": {
-                "sensor": 11,
+                "id": 11,
                 "minutes": 5,
                 "time": 900
             },
@@ -24,7 +34,7 @@
         {
             "exhaust": 102,
             "motion": {
-                "sensor": 2,
+                "id": 2,
                 "minutes": 5,
                 "time": 900
             },
@@ -40,7 +50,7 @@
         {
             "exhaust": 104,
             "motion": {
-                "sensor": 5,
+                "id": 5,
                 "minutes": 5,
                 "time": 900
             },
