--- a/config.example.json
+++ b/config.example.json
@@ -8,18 +8,9 @@
                 "time": 900
             },
             "name": "Living room",
-            "ping": [],
-            "flow": 50
-        },
-        {
-            "exhaust": 100,
-            "button": {
-                "id": 23,
-                "press": "short",
-                "time": 3600
-            },
-            "name": "Extractor",
-            "flow": 150
+            "ping": ["192.168.1.10"],
+            "flow": 50,
+            "time": 900
         },
         {
             "exhaust": 101,
@@ -29,7 +20,8 @@
                 "time": 900
             },
             "name": "Kitchen",
-            "flow": 25
+            "flow": 25,
+            "time": 900
         },
         {
             "exhaust": 102,
@@ -39,13 +31,15 @@
                 "time": 900
             },
             "name": "Toilet",
-            "flow": 10
+            "flow": 10,
+            "time": 900
         },
         {
             "exhaust": 103,
             "name": "Bedroom",
             "flow": 60,
-            "schedule": "night"
+            "schedule": "night",
+            "time": 900
         },
         {
             "exhaust": 104,
@@ -56,7 +50,8 @@
             },
             "humidity": "RH bathroom 1 (%)",
             "name": "Bathroom",
-            "flow": 15
+            "flow": 15,
+            "time": 900
         }
     ],
     "humidity": {
@@ -78,7 +73,6 @@
         "target": 700,
         "sample_time": 900
     },
-    "ventilation_time": 900,
     "itho_api": "192.168.1.2",
     "hue_api": "192.168.1.3",
     "hue_user": "hue API username/token here"
