--- a/config.example.json
+++ b/config.example.json
@@ -1,101 +1,107 @@
 {
-    "rooms": {
-        "living_room": {
-            "exhaust": 99,
-            "motion": {
-                "id": 8,
-                "minutes": 5,
-                "time": 900
-            },
-            "ping": ["192.168.1.10"],
-            "flow": 50,
-            "time": 900
-        },
-        "kitchen": {
-            "exhaust": 101,
-            "motion": {
-                "id": 11,
-                "minutes": 5,
-                "time": 900
-            },
-            "flow": 25,
-            "time": 900
-        },
-        "toilet": {
-            "exhaust": 102,
-            "motion": {
-                "id": 2,
-                "minutes": 5,
-                "time": 900
-            },
-            "flow": 10,
-            "time": 900
-        },
-        "bedroom": {
-            "exhaust": 103,
-            "flow": 60,
-            "schedule": "night",
-            "time": 900
-        },
-        "bathroom": {
-            "exhaust": 104,
-            "motion": {
-                "id": 5,
-                "minutes": 5,
-                "time": 900
-            },
-            "humidity": "RH bathroom 1 (%)",
-            "minimum_flow": 15,
-            "flow": 15,
-            "time": 900
-        }
+  "rooms": {
+    "living_room": {
+      "exhaust": 99,
+      "motion": {
+        "id": 8,
+        "minutes": 5,
+        "time": 900
+      },
+      "ping": ["192.168.1.10"],
+      "flow": 50,
+      "time": 900,
+      "co2": true
     },
-    "remote": {
-        "id": "kitchen",
-        "buttons": {
-            "high": {
-                "rooms": ["attic"],
-                "time": 10800
-            },
-            "cook30": {
-                "rooms": ["extractor"],
-                "time": 3600
-            },
-            "cook60": {
-                "rooms": ["extractor"],
-                "time": 7200
-            },
-            "timer1": {
-                "rooms": ["kitchen", "living_room"],
-                "time": 10800
-            }
-        }
+    "kitchen": {
+      "exhaust": 101,
+      "motion": {
+        "id": 11,
+        "minutes": 5,
+        "time": 900
+      },
+      "flow": 25,
+      "time": 900,
+      "co2": true
     },
-    "humidity": {
-        "high": 80,
-        "low": 75,
-        "high_time": 60,
-        "low_time": 600,
-        "min_time": 1800,
-        "flow": 250
+    "toilet": {
+      "exhaust": 102,
+      "motion": {
+        "id": 2,
+        "minutes": 5,
+        "time": 900
+      },
+      "flow": 10,
+      "time": 900
     },
-    "exhaust": {
-        "manual_setting": 111,
-        "speed_setting": 124,
-        "min_flow": 70,
-        "max_flow": 350,
-        "close_time": 5,
-        "reduce_wait_time": 300
+    "bedroom": {
+      "exhaust": 103,
+      "flow": 60,
+      "schedule": "night",
+      "time": 900,
+      "co2": true
     },
-    "co2": {
-        "target": 700,
-        "sample_time": 900
-    },
-    "metrics": {
-        "ip": "127.0.0.1",
-        "port": 8089
-    },
-    "itho_api": "192.168.1.2",
-    "hue_api": "192.168.1.3",
-    "hue_user": "hue API username/token here"
+    "bathroom": {
+      "exhaust": 104,
+      "motion": {
+        "id": 5,
+        "minutes": 5,
+        "time": 900
+      },
+      "humidity": "RH bathroom 1 (%)",
+      "minimum_flow": 15,
+      "flow": 15,
+      "time": 900
+    }
+  },
+  "remote": {
+    "id": "kitchen",
+    "buttons": {
+      "high": {
+        "rooms": ["attic"],
+        "time": 10800
+      },
+      "cook30": {
+        "rooms": ["kitchen"],
+        "time": 3600
+      },
+      "cook60": {
+        "rooms": ["kitchen"],
+        "time": 7200
+      },
+      "timer1": {
+        "rooms": ["kitchen", "living_room"],
+        "time": 10800
+      }
+    }
+  },
+  "humidity": {
+    "high": 80,
+    "low": 75,
+    "high_time": 60,
+    "low_time": 600,
+    "min_time": 1800,
+    "flow": 150
+  },
+  "exhaust": {
+    "manual_setting": 111,
+    "speed_setting": 124,
+    "min_flow": 70,
+    "max_flow": 350,
+    "close_time": 5,
+    "reduce_wait_time": 300
+  },
+  "co2": {
+    "target": 700,
+    "metrics_interval": 60,
+    "sample_time": 300,
+    "sample_interval": 3600,
+    "increase": 25
+  },
+  "metrics": {
+    "ip": "127.0.0.1",
+    "port": 8089
+  },
+  "itho_api": "192.168.1.2",
+  "hue_api": "192.168.1.3",
+  "hue_user": "hue API username/token here"
 }
