--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,7 @@ jobs:
     container:
       image: ghcr.io/inko-lang/inko:main
     steps:
+      - run: microdnf install --quiet --assumeyes tar
       - uses: actions/checkout@v3
       - run: inko --version
       - run: inko test
