Separate minimum and default air flows
This better captures what the two mean: minimum flow is a hard minimum,
and default flow is used when no active ventilation is needed, and is
still subject to the minimum flow.

The use case is a bathroom that you always want to run at e.g. 10 m3/h,
regardless of what kind of ventilation is necessary for other rooms.

--- a/config.example.json
+++ b/config.example.json
@@ -2,14 +2,14 @@
   "rooms": {
     "living_room": {
       "exhaust": 115,
-      "minimum_flow": 45,
+      "default_flow": 45,
       "maximum_flow": 70,
       "flow_correction": 1.05,
       "co2": "192.168.1.200"
     },
     "kitchen": {
       "exhaust": 113,
-      "minimum_flow": 40,
+      "default_flow": 40,
       "maximum_flow": 40,
       "flow_correction": 1.05,
       "co2": "192.168.1.200"
