Run tests against the latest stable release

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/inko-lang/inko:main
+      image: ghcr.io/inko-lang/inko:latest
     steps:
       - run: microdnf install --quiet --assumeyes tar git
       - uses: actions/checkout@v3
