Require Inko 0.16.0 or newer

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,8 +5,8 @@ on:
   pull_request:
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
-  cancel-in-progress: true
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 env:
   REGISTRY: ghcr.io
@@ -16,7 +16,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/inko-lang/inko:main
+      image: ghcr.io/inko-lang/inko:latest
     steps:
       - run: microdnf install --quiet --assumeyes tar git
       - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
   fmt:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/inko-lang/inko:main
+      image: ghcr.io/inko-lang/inko:latest
     steps:
       - run: microdnf install --quiet --assumeyes tar git
       - uses: actions/checkout@v4
