--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/inko-lang/inko:latest
+      image: ghcr.io/inko-lang/inko:main
     steps:
       - run: microdnf install --quiet --assumeyes tar git
       - uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
   fmt:
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/inko-lang/inko:latest
+      image: ghcr.io/inko-lang/inko:main
     steps:
       - run: microdnf install --quiet --assumeyes tar git
       - uses: actions/checkout@v4
